--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "test-frontend",
+  "name": "sql-test",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:local": "ng serve --configuration=local",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,7 +19,10 @@
     "@angular/material": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
+    "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@angular/ssr": "^17.0.0",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -29,8 +31,10 @@
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^16.2.2",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.8",
+    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
     "karma": "~6.4.0",
